tests/baselines/reference/typingsSuggestionBun2.errors.txt
a.ts(1,14): error TS2867: Cannot find name 'Bun'. Do you need to install type definitions for Bun? Try `npm i --save-dev @types/bun`.


==== tsconfig.json (0 errors) ====
    { "compilerOptions": {} }
    
==== a.ts (1 errors) ====
    const file = Bun.file("/a.ts");
                 ~~~
!!! error TS2867: Cannot find name 'Bun'. Do you need to install type definitions for Bun? Try `npm i --save-dev @types/bun`.
    